# SortPhotos

./: .gitignore  LICENSE  README  README.md  data_processing.py  file_utils.py  main.py  outtext  pyproject.toml  setup.py
sort-photos/: __init__.py  file_utils.py
src/sortphoto/: data_processing.py  file_utils.py  main.py
src/sortphotos/: main.py
