[project]
name = "sortphoto"
version = "0.0.1"
authors = [
  { name="jharri34", email="harrisjayjamall@gmail.com" },
]
description = "sortphoto is a lightweight, dependency-free image sorting tool that organizes your photos by date or file type"
readme = "README.md"
requires-python = ">=3.13.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jharri34/sortphoto"
Issues = "https://github.com/jharri34/sortphoto/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"